sourceview: Cleanup sort()

gtk_source_buffer_sort_lines() does all of this for us!

https://bugzilla.gnome.org/show_bug.cgi?id=771367